methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '(' expected but identifier found.
    if isOverBaggle() {
       ^